tests/whole_screen/snapshots/whole_screen__a_session_with_no_model_draws_the_welcome_the_warning_and_the_box.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 18,4 scrolled 0
|╭─ crucible v0.1.3 ────────────────────────────────────────────────────────────╮|
|│                                  │ Recent sessions                           │|
|│  ▄▄▄ ▄▄▄ █  █ ▄▄▄ █ ▄▄▄ █   ▄▄▄  │                                           │|
|│  █   █▄▄ █  █ █   █ █▄█ █   █▄▄  │ No recent sessions                        │|
|│  ▀▄▄ █ █ ▀▄▄▀ ▀▄▄ █ █▄█ █▄▄ █▄▄  │                                           │|
|│                                  │ ───────────────────────────────────────── │|
|│  no model selected               │                                           │|
|│                                  │ Tips                                      │|
|│  /…/workspace                    │                                           │|
|│                                  │ · /          opens the command list       │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl-c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|                                                                                |
|Warning: No model selected. Use /model to select the model to ask.              |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
|                                                                                |
|                                                                                |
|                                                                                |
