tests/whole_screen/snapshots/whole_screen__a_shift_tab_mid_turn_steps_the_mode_the_next_turn_runs_under.snap
---
source: tests/whole_screen/main.rs
expression: on_the_first_beat(&window.picture())
---
80x24 cursor 21,4 scrolled 0
|│ ─────────────────────────────────────────────────────────────────────────── ││|
|│                                                                             ││|
|│ Tips                                                                        ││|
|│                                                                             ││|
|│ · /          opens the command list                                         ││|
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|› start it                                                                     ┃|
|                                                                               ┃|
|● Bash(sleep 30)                                                               ●|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)                              ┃|
|                                                                               ┃|
|It is started. That is all.                                                    ┃|
|                                                                               ┃|
|✳ writing (0s · ↓ 4 · esc to interrupt)                                        ┃|
|                                                                               ┃|
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|allow edits on (shift+tab to cycle) · 1 command        anthropic · claude-test-1|
