tests/whole_screen/snapshots/whole_screen__a_single_waiting_prompt_is_told_the_queue_key_in_a_narrow_window.snap
---
source: tests/whole_screen/main.rs
expression: from_the_queue_box(&picture)
---
|╭─ 1 queued ──────────────────────────╮ |
|│ › and add a test for the windows p… │ |
|╰─────────────────────── ctrl+q edit ─╯ |
|                         99% window left|
|╭──────────────────────────────────────╮|
|│ ›                                    │|
|╰──────────────────────────────────────╯|
|ask mode on    anthropic · claude-test-1|
