tests/whole_screen/snapshots/whole_screen__a_slash_opens_the_command_list_above_the_box.snap
---
source: tests/whole_screen/main.rs
assertion_line: 346
expression: window.picture()
---
80x24 cursor 20,5 scrolled 0
|Warning: No models available. Use /login or set an API key environment variable.|
|Then use /model to select a model.                                              |
|                                                                                |
|› /help            what these are                                               |
|  /release-notes   what changed in each release                                 |
|  /model           pick which model answers                                     |
|  /effort          pick how hard it thinks                                      |
|  /login           sign in to a provider account                                |
|  /logout          remove a stored account or API key                           |
|  /mode            ask · allowEdits · fullAccess                                |
|  /sandbox         sandbox disabled (enter to configure)                        |
|  /theme           pick the colours crucible draws with                         |
|  /resume          pick up an earlier session here                              |
|  /cache           inspect or clean prompt-cache state                          |
|  /compact         replace what is behind you with notes on it                  |
|  /clear           start a new session, leaving this one                        |
|  /exit            leave                                                        |
|                                                                                |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ › /                                                                          │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
|                                                               transcript map → |
