tests/whole_screen/snapshots/whole_screen__a_slash_typed_mid_turn_opens_the_command_list.snap
---
source: tests/whole_screen/main.rs
assertion_line: 726
expression: on_the_first_beat(&window.picture())
---
80x24 cursor 21,5 scrolled 0
|                                                                                |
|✳ writing (0s · ↓ 4 · esc to interrupt)                                         |
|                                                                                |
|› /help            what these are                                               |
|  /release-notes   what changed in each release                                 |
|  /context         what fills the model's window                                |
|  /model           pick which model answers                                     |
|  /effort          pick how hard it thinks                                      |
|  /fast            pick how fast it answers                                     |
|  /login           sign in to a provider account                                |
|  /logout          remove a stored account or API key                           |
|  /mode            ask · allowEdits · fullAccess                                |
|  /sandbox         sandbox disabled (enter to configure)                        |
|  /theme           pick the colours crucible draws with                         |
|  /resume          pick up an earlier session here                              |
|  /cache           inspect or clean prompt-cache state                          |
|  /compact         replace what is behind you with notes on it                  |
|  /clear           start a new session, leaving this one                        |
|  /exit            leave                                                        |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ › /                                                                          │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle) · 1 command           anthropic · claude-test-1|
