tests/whole_screen/snapshots/whole_screen__a_take_back_the_box_has_no_room_for_says_so_beside_the_title.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1197
expression: steadied_picture(&window.picture())
---
80x40 cursor 37,31 scrolled 0
|│                                                                             ││|
|│ Recent sessions                                                             ││|
|│                                                                             ││|
|│ No earlier session for this workspace                                       │┃|
|│                                                                             │┃|
|│ ─────────────────────────────────────────────────────────────────────────── │┃|
|│                                                                             │┃|
|│ Tips                                                                        │┃|
|│                                                                             │┃|
|│ · /          opens the command list                                         │┃|
|│ · \ enter    adds a line without sending                                    │┃|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|› start it                                                                     ┃|
|                                                                               ●|
|● Bash(sleep 30)                                                               ┃|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)                              ┃|
|                                                                               ┃|
|It is started. That is all.                                                    ┃|
|                                                                               ┃|
|✳ writing (0s · ↓ 4 · esc to interrupt)                                         |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|5 queued · ctrl+enter to send all now · no room in the box · line stays queued  |
|                                                                                |
|› and add a test for the windows path                                           |
|                                                                                |
|  then run the whole gate                                                       |
|                                                                                |
|  check the ascii glyphs too                                                    |
|                                                                                |
|↑↓ to walk · ctrl+e to edit · ctrl+x to delete · ctrl+s to send now             |
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ › [Pasted text 1048556 chars]                                                │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle) · 1 command           anthropic · claude-test-1|
