tests/whole_screen/snapshots/whole_screen__a_typed_line_that_reaches_the_edge_wraps_and_grows_the_box.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 21,68 scrolled 0
|│                                                                             ││|
|│ No earlier session for this workspace                                       ││|
|│                                                                             ││|
|│ ─────────────────────────────────────────────────────────────────────────── ││|
|│                                                                             │┃|
|│ Tips                                                                        │┃|
|│                                                                             │┃|
|│ · /          opens the command list                                         │┃|
|│ · \ enter    adds a line without sending                                    │┃|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|                                                                               ┃|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|                                                                                |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ › the quick brown fox jumps over the lazy dog. the quick brown fox jumps     │|
|│   over the lazy dog. the quick brown fox jumps over the lazy dog.            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
