tests/whole_screen/snapshots/whole_screen__a_window_that_narrows_mid_session_redraws_what_is_live_at_the_new_width.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1869
expression: window.picture()
---
52x20 cursor 17,47 scrolled 0
|│                                                 ││|
|│ Tips                                            ││|
|│                                                 ││|
|│ · /          opens the command list             ││|
|│ · \ enter    adds a line without sending        ││|
|│ · shift+tab  steps the permission mode          │┃|
|│ · ctrl+c     clears the line typed so far       │┃|
|╰─────────────────────────────────────────────────╯┃|
|                                                   ┃|
|                                                   ┃|
|Warning: No models available. Use /login or set an ┃|
|API key environment variable. Then use /model to   ┃|
|select a model.                                    ┃|
|                                                   ┃|
|                                                    |
|                                                    |
|╭──────────────────────────────────────────────────╮|
|│ › the quick brown fox jumps over the lazy dog    │|
|╰──────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                    |
