tests/whole_screen/snapshots/whole_screen__an_answer_longer_than_the_window_leaves_the_box_whole_at_the_foot_of_it.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x16 cursor 13,4 scrolled 26
| over the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown|
| fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the q|
|uick brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy |
|dog. the quick brown fox jumps over the lazy dog. the quick brown fox jumps over|
| the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox |
|jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the quick |
|brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. |
|the quick brown fox jumps over the lazy dog. the quick brown fox jumps over the |
|lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox jumps|
| over the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown|
| fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the q|
|uick brown fox jumps over the lazy dog.                                         |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
